MAGETWO-31045: Layout issue on Contact Us form

--- a/app/design/frontend/Magento/blank/web/css/source/layout.less
+++ b/app/design/frontend/Magento/blank/web/css/source/layout.less
@@ -78,22 +78,17 @@
     .page-wrapper > .widget,
     .page-wrapper > .page-bottom,
     .block.category.event,
-    .top-container {
+    .top-container,
+    .page-main {
         padding-left: @layout-indent;
         padding-right: @layout-indent;
         margin-left: auto;
         margin-right: auto;
         width: auto;
-        max-width: @layout-max-width;
-    }
-
-    .page-main {
-        box-sizing: border-box;
-        margin-right: auto;
-        margin-left: auto;
-        padding-right: @layout-indent;
-        padding-left: @layout-indent;
         max-width: @layout-max-width + @layout-indent * 2;
+        box-sizing: border-box;
+    }
+    .page-main {
         width: 100%;
         .vendor-prefix-flex-grow(1);
         .vendor-prefix-flex-shrink(0);
